<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_LED" Id="{1a645526-e5f7-497b-ad08-d5a697b15633}">
    <Declaration><![CDATA[TYPE ST_LED :
STRUCT
	eLEDState: E_LED_STATE;
	eLEDErrorStatus: E_LED_Errors;
	bRequestApproved: BOOL;
	fbTimer: TON;
	tTarget: TIME;
	color: STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>