<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="EMPTY" Id="{b2038c45-dc12-45be-8bea-73b36e38442e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stEmptyRequest: ST_Request := ();
	sEmptyString: STRING := '';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>