<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="MAIN" Id="{5e498ecd-2712-4d75-94b7-b5fe70a68cb9}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
(*	- Project: My Light Status: A Documented Study OF PLC State Machines
		- execution process:
			1. UI Pops up, with both light modules showing up
			2. Job is to click through the lights using the mouse. Whichever ones are "turned on" will the be packaged as a request file:
				- when the "submit request" has button has been clicked on
				- time is fixable, if it isn't fixed, it will be set to 3 seconds
				- if there is no assignment added to the stack, the LED will shut off
			3. Output:
				- edited physical LED state, reflects the UI
				- update log
					- previous color
					- time elapsed for the light state(current, then move it to the log)
				- blanks out the LED when there's no requests going no
*)
VAR
	print: STRING := '';
	fbTimerRed: TON;
	fbTimerOrange: TON;
	fbTimerGreen: TON;
	stSystem : ST_LEDSystem; //creation of the entire system structure, see ST_LEDSystem in DUT
	//reader variables
	sUserRequestInput_r: STRING := EMPTY.sEmptyString;
	sUserRequestInput_o: STRING := EMPTY.sEmptyString;
	sUserRequestInput_g: STRING := EMPTY.sEmptyString;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//this portion checks existing status

//TODO: THE FOLLOWING PORTION NEEDS TO BE PUT INTO A CALLABLE FUNCTION CLICK
//this portion of the code checks if anything is running; if the request exists, then performs the request
IF(stSystem.stLED_r.eLEDState = E_LED_State.disabled AND stSystem.stRequest_r.exists) THEN
	print := 'bazooka red';
	
	//set the target time
	fbtimerRed(IN := TRUE, PT := T#2S);
//	fbtimerRed(IN := TRUE, PT := stSystem.stRequest_r.tTargetTime);
	
	//TODO: ADD THE LOG
	
	//clear the request, as it has been passed
	stSystem.stRequest_r := EMPTY.stEmptyRequest;
END_IF

IF(stSystem.stLED_o.eLEDState = E_LED_State.disabled AND stSystem.stRequest_o.exists) THEN
	print := 'bazooka orange';

	//set the target time	
	fbTimerOrange(IN := stSystem.stLED_o.eLEDState = E_LED_State.disabled AND stSystem.stRequest_o.exists, PT := stSystem.stRequest_o.tTargetTime);
	//function block state
	
	//TODO: ADD THE LOG
	
	//clear the request, as it has been passed
	stSystem.stRequest_o := EMPTY.stEmptyRequest;
END_IF

IF(stSystem.stLED_g.eLEDState = E_LED_State.disabled AND stSystem.stRequest_g.exists) THEN
	print := 'bazooka green';

	//set the target time	
	fbTimerGreen(IN := TRUE, PT := stSystem.stRequest_g.tTargetTime);

	//TODO: ADD THE LOG
	
	//clear the request, as it has been passed
	stSystem.stRequest_g := EMPTY.stEmptyRequest;
END_IF

//take timer status and apply it to the state of the LED
IF(stSystem.stLED_g.eLEDState = E_LED_State.enabled AND fbTimerGreen.Q) THEN
	stSystem.stLED_g.eLEDState := E_LED_State.disabled;
END_IF

IF(stSystem.stLED_o.eLEDState = E_LED_State.enabled AND fbTimerOrange.Q) THEN
	stSystem.stLED_o.eLEDState := E_LED_State.disabled;
END_IF

IF(stSystem.stLED_r.eLEDState = E_LED_State.enabled AND fbTimerRed.Q) THEN
	stSystem.stLED_r.eLEDState := E_LED_State.disabled;
END_IF

IF(stSystem.stLED_g.eLEDState = E_LED_State.disabled AND fbTimerGreen.IN = TRUE) THEN
	stSystem.stLED_g.eLEDState := E_LED_State.enabled;	
END_IF

IF(stSystem.stLED_o.eLEDState = E_LED_State.disabled AND fbTimerOrange.IN = TRUE) THEN
	stSystem.stLED_o.eLEDState := E_LED_State.enabled;	
END_IF

IF(stSystem.stLED_r.eLEDState = E_LED_State.disabled AND fbTimerRed.IN = TRUE) THEN
	stSystem.stLED_r.eLEDState := E_LED_State.enabled;	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="508" Count="0" />
      <LineId Id="405" Count="2" />
      <LineId Id="427" Count="1" />
      <LineId Id="569" Count="0" />
      <LineId Id="431" Count="1" />
      <LineId Id="599" Count="0" />
      <LineId Id="533" Count="0" />
      <LineId Id="435" Count="7" />
      <LineId Id="570" Count="0" />
      <LineId Id="580" Count="0" />
      <LineId Id="446" Count="0" />
      <LineId Id="598" Count="0" />
      <LineId Id="600" Count="0" />
      <LineId Id="577" Count="0" />
      <LineId Id="450" Count="6" />
      <LineId Id="572" Count="1" />
      <LineId Id="460" Count="0" />
      <LineId Id="536" Count="1" />
      <LineId Id="464" Count="3" />
      <LineId Id="181" Count="0" />
      <LineId Id="490" Count="0" />
      <LineId Id="489" Count="0" />
      <LineId Id="491" Count="2" />
      <LineId Id="495" Count="0" />
      <LineId Id="538" Count="6" />
      <LineId Id="582" Count="0" />
      <LineId Id="581" Count="0" />
      <LineId Id="585" Count="1" />
      <LineId Id="588" Count="2" />
      <LineId Id="587" Count="0" />
      <LineId Id="592" Count="2" />
      <LineId Id="591" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>